# QuViz

./: CMakeLists.txt  README.md  search-console.txt
cmake/: CompilerOptions.cmake  addGitLibs.cmake
example-data/: KNM_12_6.h5
examples/: CMakeLists.txt
examples/gif/: CMakeLists.txt  gif.cpp
examples/png/: .#png.cpp  CMakeLists.txt  png.cpp
examples/stl/: CMakeLists.txt  stl.cpp
examples/viewer/: CMakeLists.txt  viewer.cpp
src/: CMakeLists.txt  Circle.h  Cube.h  Cuboid.cpp  Cuboid.h  Cylinder.cpp  Cylinder.h  GlobalTypedefs.h  Object.cpp  Object.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Solid.h  Sphere.cpp  Sphere.h  Square.h  Surface.cpp  Surface.h  Tube.h  main.cpp
src/IO/: Io.cpp  Io.h
src/colors/: Palette.h  RGB.h
src/examples/: CMakeLists.txt
src/examples/gif/: CMakeLists.txt  gif.cpp
src/examples/png/: CMakeLists.txt  png.cpp
src/examples/viewer/: CMakeLists.txt  viewer.cpp
src/fonts/: Digital.cpp  Digital.h  FontOptions.h
src/lattices/: Drawing.h  Lattice2d.cpp  Lattice2d.h  LatticeDefs.h  TwoD.cpp  TwoD.h
src/molecules/: C60.cpp  C60.h  Drawing.h  SOD20.cpp  SOD20.h  SOD60.cpp  SOD60.h
src/render/: TextRenderer.cpp  TextRenderer.h
src/shapes/: Arrow.cpp  Arrow.h  Circle.h  Cone.cpp  Cone.h  Cube.h  Cuboid.cpp  Cuboid.h  Cylinder.cpp  Cylinder.h  Object.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Solid.cpp  Solid.h  Sphere.cpp  Sphere.h  Square.h  Surface.h  Tube.h
src/util/: ColorLegend.h  Export.h  HDF5Interface.cpp  HDF5Interface.h  Normalization.h  macros.h
